<resources>
    <string name="app_name">ForDogs</string>
    <string name="textCorreo_inputCorreo_loginLayout">Dirección de correo electrónico</string>
    <string name="textPassword_inputPassword_loginLayout">Contraseña</string>
    <string name="bt_textIniciaSesion_loginLayout">Iniciar sesión</string>
    <string name="bt_textSignUp_loginLayout">¿Eres nuevo? Crea un usuario</string>
    <string name="text_title_registerLayout">Registrase</string>
    <string name="textPasword_inputPaswor_RegisterLayout">Crear contraseña</string>
    <string name="textUser_inputUser_RegisterLayout">Crear usuario</string>
    <string name="text_btRegistrarse_registerLayout">Registrarse</string>
    <string name="invalidPasswordOrEmail">Correo o contraseña incorrecto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Eliminar</string>
    <string name="calendar_input_event">Introduzca el titulo del evento</string>
    <string name="calendar_delete_dialog">Seguro que desea borrar el evento?</string>
    <string name="mesPlaceholder">Octubre 2022</string>
    <string name="domingo">D</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">M</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="textRaza">Raza</string>
    <string name="textPeso">Peso</string>
    <string name="textColor">Color</string>
    <string name="textAlto">Alto</string>
    <string name="textLargo">Largo</string>
    <string name="textComidaFavorita">Comida Favorita</string>
    <string name="bt_saveChanges_editProfileLayout">save changes</string>
    <string name="nuevo_evento_title">Nuevo Evento</string>
    <string name="tituloEvento">Título</string>
    <string name="eventDate">Fecha</string>
    <string name="amTime">AM</string>
    <string name="pmTime">PM</string>
    <string name="description">Descripción…</string>
    <string name="hora">Hora</string>
    <string name="consejos">Curiosidades sobre la raza de su perro</string>
    <string name="text_Advertencia">Advertencia</string>
    <string name="text_mensaje_cerrarSesion">¿Está seguro que desea salir?</string>
    <string name="text_Si">Ok</string>
    <string name="text_Cancelar">Cancelar</string>
    <string name="fecha_eventCard">NOVIEMBRE 10</string>
    <string name="proximosEventos">PRÓXIMOS:</string>
    <string name="calendarCellText">1</string>
    <string name="bt_editarPerfil">Editar</string>
    <string name="text_colorText_ProfileLayout">Color:</string>
    <string name="text_largoText_ProfileLayout">Largo:</string>
    <string name="text_altoText_ProfileLayout">Alto:</string>
    <string name="text_comidaFavText_ProfileLayout">Comida Favorita:</string>
    <string name="text_conductaText_ProfileLayout">Conducta:</string>
    <string name="text_jugueteFavText_ProfileLayout">Juguete Favorito:</string>
    <string name="text_raza_profileLayout">Raza:</string>
    <string name="text_chispa_editLayout">Chispa</string>
    <string name="text_peso_editLayout">Peso:</string>
    <string name="text_35lb_editLayout">35 lb</string>
    <string name="text_cafe_editLayout">Cafe</string>
    <string name="text_35cm_editLayout">35cm</string>
    <string name="text_25cm_editLayout">25cm</string>
    <string name="text_pizza_editLayout">Pizza</string>
    <string name="text_agresivo_profileLayout">agresivo</string>
    <string name="text_pelotaDeTennis_profileLayout">Pelota de tenis</string>
    <string name="text_bienvenido_calendarLayout">Bienvenido:</string>
    <string name="petName_EditProfile">Nombre</string>
    <string name="evento_placeholder">Tratar perro</string>
    <string name="descripcion_placeholder">Cepillar su cabello</string>
    <string name="eventState_placeholder">COMPLETED</string>
    <string name="eliminar_confirmacion">Eliminar evento</string>
    <string name="sureToDelete">¿Está seguro que desea eliminar el evento?</string>
    <string name="confirmation">¡Evento completado con éxito!</string>
    <string name="sureToMarkAsComplete">¿Seguro que quieres marcar el evento como completado?</string>
    <string name="completed_event_congrats">Has completado exitosamente tu evento</string>
    <string name="completar">Completar</string>
    <string name="saveBtn_event">SAVE</string>
    <string name="eventDate_card">18</string>
    <string name="eventDay_card">Tue</string>
    <string name="eventMonth_Card">Nov</string>
    <string name="date_format_forEvent">%1$s-%2$d-%3$d</string>
    <string name="time_format_forEvent">%1$d:%2$d</string>
    <string name="time_format_forEvent_HourUnit">0%1$d:%2$d</string>
    <string name="time_format_forEvent_MinuteUnit">%1$d:0%2$d</string>
    <string name="time_format_forEvent_Units">0%1$d:0%2$d</string>
    <string name="timeandData_format">%1$s, %2$s</string>
    <string name="title_emtpydata">Woof... No hay nada por aquí</string>
    <string name="subtitle_emptydata">Parece que no has añadido eventos aún.</string>
    <string name="modificarEvento_title">Modificar Recordatorio</string>
    <string name="text_textView_noTips">Lo sentimos, hemos buscado mucho pero no encontramos nada sobre este tipo de raza.</string>
    <string name="text_urlImagen_editProfile">URL de la imagen</string>
    <string name="completarEvent">Completar</string>
    <string name="editarEvent">Editar</string>
    <string name="eliminarEvent">Eliminar</string>
</resources>