<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profile.ProfileFragment"
    android:background="@drawable/app_background_with_gradient">

    <Button
        android:id="@+id/bt_editarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_editarPerfil"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>


    <ImageView
        android:id="@+id/img_pet_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_editarPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/petName_ProfileLayout"
        android:layout_marginTop="@dimen/marginSize_medium"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/petName_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_pet_ProfileLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginSize_medium"
        tools:text="CHISPA"
        android:textSize="@dimen/sizeText_petName"
        android:textColor="@color/color_feldgrau"
        android:fontFamily="@font/krub_bold"
        />

    <TextView
        android:id="@+id/text_razaText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin30"
        android:layout_marginStart="@dimen/margin80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petName_ProfileLayout"
        android:text="@string/text_raza_profileLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"
        />

    <TextView
        android:id="@+id/text_dato_razaText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin30"
        android:layout_marginEnd="@dimen/margin80"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_chispa_editLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petName_ProfileLayout" />

    <TextView
        android:id="@+id/text_pesoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_peso_editLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_razaText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_razaText_ProfileLayout" />


    <TextView
        android:id="@+id/text_dato_pesoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_razaText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_razaText_ProfileLayout"
        android:text="@string/text_35lb_editLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_colorText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_colorText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_pesoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_pesoText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_colorText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_pesoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_pesoText_ProfileLayout"
        android:text="@string/text_cafe_editLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_largoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_largoText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_colorText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_colorText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_largoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_colorText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_colorText_ProfileLayout"
        android:text="@string/text_35cm_editLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_altoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_altoText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_largoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_largoText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_altoText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_largoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_largoText_ProfileLayout"
        android:text="@string/text_25cm_editLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_comidaFavText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_comidaFavText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_altoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_altoText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_comidaFavText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_altoText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_altoText_ProfileLayout"
        android:text="@string/text_pizza_editLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_conductaText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_conductaText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_comidaFavText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_comidaFavText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_conductaText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_comidaFavText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_comidaFavText_ProfileLayout"
        android:text="@string/text_agresivo_profileLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>

    <TextView
        android:id="@+id/text_jugueteFavText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_jugueteFavText_ProfileLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintStart_toStartOf="@+id/text_conductaText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_conductaText_ProfileLayout" />

    <TextView
        android:id="@+id/text_dato_jugueteFavText_ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="@+id/text_dato_conductaText_ProfileLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_dato_conductaText_ProfileLayout"
        android:text="@string/text_pelotaDeTennis_profileLayout"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"/>


</androidx.constraintlayout.widget.ConstraintLayout>