<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.calendar.CalendarFragment">

    <ImageView
        android:id="@+id/profilepic_calendar_fragment"
        android:layout_width="@dimen/calendarPFPSize"
        android:layout_height="@dimen/calendarPFPSize"
        android:layout_marginHorizontal="@dimen/margin30"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/welcomeTV_calendar_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:fontFamily="@font/krub_bold"
        android:text="@string/text_bienvenido_calendarLayout"
        android:textColor="@color/color_feldgrau"
        app:layout_constraintBottom_toBottomOf="@id/profilepic_calendar_fragment"
        app:layout_constraintStart_toEndOf="@id/profilepic_calendar_fragment"
        app:layout_constraintTop_toTopOf="@id/profilepic_calendar_fragment"
        android:textSize="@dimen/textSize_bienvenido_calendarFragment"/>

    <TextView
        android:id="@+id/userName_calendarFragment"
        android:layout_width="@dimen/ceroDp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginSize_extraSmall"
        app:layout_constraintStart_toEndOf="@id/welcomeTV_calendar_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcomeTV_calendar_fragment"
        app:layout_constraintBottom_toBottomOf="@id/welcomeTV_calendar_fragment"
        android:fontFamily="@font/krub_bold"
        android:textColor="@color/color_feldgrau"
        android:textSize="@dimen/textSize_bienvenido_calendarFragment"

        tools:text="Chispa"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/ceroDp"
        android:layout_height="@dimen/ceroDp"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTV_calendar_fragment">

        <LinearLayout
            android:id="@+id/calendarHeader_linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/previous_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="@color/color_feldgrau" />

            <TextView
                android:id="@+id/month_nameHeader_calendar_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/mesPlaceholder"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau"
                android:textSize="@dimen/defaultTitleSize" />

            <ImageButton
                android:id="@+id/next_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_baseline_arrow_forward"
                app:tint="@color/color_feldgrau" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendarDays_linearLayout"
            android:layout_width="@dimen/ceroDp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendarHeader_linearLayout">

            <TextView
                android:id="@+id/sunday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/domingo"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/monday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/lunes"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/tuesday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/martes"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/wednesday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/miercoles"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/thursday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/jueves"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/friday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/viernes"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

            <TextView
                android:id="@+id/saturday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/krub_bold"
                android:text="@string/sabado"
                android:textAlignment="center"
                android:textColor="@color/color_feldgrau" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="@dimen/ceroDp"
            android:layout_height="@dimen/ceroDp"
            android:layout_marginHorizontal="@dimen/margin10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendarDays_linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/begin_guideLine2_calendarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>