<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    android:layout_height="150dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/ceroDp"
            android:layout_height="@dimen/ceroDp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divisionLine_View"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/day"
                android:text="@string/eventDay_card"
                android:textSize="@dimen/dayText_Card"
                android:textColor="@android:color/black"
                android:alpha="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/eventDate_card"
                android:layout_gravity="center"
                android:textSize="@dimen/dateText_Card"
                android:textColor="@color/color_feldgrau"
                app:layout_constraintTop_toBottomOf="@id/day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/month"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/month"
                android:layout_gravity="center"
                android:text="@string/eventMonth_Card"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:alpha="0.5"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divisionLine_View"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:layout_marginStart="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/black"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/ceroDp"
            android:layout_height="@dimen/ceroDp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/divisionLine_View"
            app:layout_constraintEnd_toEndOf="parent"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/evento_placeholder"
                    android:singleLine="true"
                    android:textSize="@dimen/eventTitle_Card"
                    android:id="@+id/title"
                    android:layout_marginStart="@dimen/margin20"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="@dimen/moreOptions_size"
                    android:layout_height="@dimen/moreOptions_size"
                    android:id="@+id/options"
                    android:layout_marginEnd="@dimen/margin10"
                    android:backgroundTint="@color/dark_magic_mint"
                    android:background="@drawable/more"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/descripcion_placeholder"
                android:singleLine="true"
                android:alpha="0.5"
                android:id="@+id/description"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text=""
                android:layout_marginStart="@dimen/margin20"
                android:singleLine="true"
                android:alpha="0.5"
                android:id="@+id/time"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/eventState_placeholder"
                android:textSize="@dimen/eventState_size"
                android:id="@+id/status"
                android:layout_marginEnd="@dimen/margin10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>